--- a/newhtml2.html
+++ b/newhtml2.html
@@ -2,7 +2,7 @@
     <head>
         <title>New website</title>
     </head>
-    <body color=red>
+    <body color="red">
         <h2 align="center">This is all about Artificial Intelligence</h2>
         <p align="center">Hi Ravikiran</p>
     </body>
