Add styling to h1 tag

--- a/newhtml2.html
+++ b/newhtml2.html
@@ -3,7 +3,7 @@
         <title>New website</title>
     </head>
     <body style="background-color: yellow;">
-        <h2 align="center">This is all about Artificial Intelligence</h2>
+        <h2 align="center" style="color: orange;">This is all about Artificial Intelligence</h2>
         <p align="center">Hi Ravikiran</p>
     </body>
 </html>
