the new styles added

--- a/newhtml2.html
+++ b/newhtml2.html
@@ -5,5 +5,6 @@
     <body style="background-color: yellow;">
         <h2 align="center" style="color: orange;">This is all about Artificial Intelligence</h2>
         <p align="center">Hi Ravikiran</p>
+        <h3 align="center">It is github</h3>
     </body>
 </html>
