coloring is addedd

--- a/newhtml3.html
+++ b/newhtml3.html
@@ -1,9 +1,14 @@
 <html>
     <head>
         <title>Table</title>
+        <style>
+            table{
+                background-color: yellow;
+            }
+        </style>
     </head>
     <body>
-        <table align="center" border="2px" style="background-color: blue;">
+        <table align="center" border="2px" >
             <tr>
                 <th>Slno</th>
                 <th>Name</th>
