--- a/newhtml3.html
+++ b/newhtml3.html
@@ -1,6 +1,11 @@
 <html>
     <head>
         <title>Table</title>
+        <style>
+            table{
+                background-color: yellow;
+            }
+        </style>
     </head>
     <body>
         <table align="center" border="2px">
