color has modified

--- a/newhtml3.html
+++ b/newhtml3.html
@@ -3,7 +3,7 @@
         <title>Table</title>
         <style>
             table{
-                background-color: yellow;
+                background-color:red;
             }
         </style>
     </head>
